[package]
name = "order_book_dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "order_book_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# 已修正：添加这些特性以消除编译警告
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "idl-build", "interface-instructions"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "idl-build"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
#solana-program = "2.3.0" , "min_const_generics"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1